# newscollector

./: .env.example  .gitignore  00_START_HERE.md  BUILD_REPORT.md  BUILD_SUMMARY.md  DEPLOYMENT_CHECKLIST.md  DOCUMENTATION_INDEX.md  News_Report_Test_Search.txt  News_Report_election_sitendtv.com.txt  PROJECT_COMPLETION_SUMMARY.md  QUICK_START.md  README.md  SETUP_GUIDE.md  app.py  google_docs_helper.py  local_news_bot.py  local_report_helper.py  news_tracker.py  pyproject.toml  quickstart.py  rental_app.db  rental_app.py  requirements.txt  run_now.bat  send_report.py  setup_auth.py  setup_task.bat  test_docs.py  test_gn.py  test_local.py  test_telegram.py  whatsapp_bot.py
.github/: copilot-instructions.md
src/: __init__.py  deduplicator.py  google_docs_exporter.py  google_sheets_handler.py  main.py  news_scraper.py
static/: rental.css  script.js  style.css
templates/: index.html
templates/rental/: base.html  dashboard.html  home.html  listing_detail.html  listing_form.html  login.html  signup.html
twitter_transcript/: .gitignore  transcribe.py
