[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[project]
name = "news-autocollector"
version = "1.0.0"
description = "Bilingual News Monitoring Automation - Search multiple news websites and export to Google Docs"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "google-auth-oauthlib>=1.1.0",
    "google-auth-httplib2>=0.2.0",
    "google-api-python-client>=2.107.0",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
    "selenium>=4.20.0",
    "webdriver-manager>=4.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.12.0",
    "flake8>=6.1.0",
    "isort>=5.13.0",
]
